@@ -2,6 +2,8 @@
 
 	* src/applet.c (nma_menu_device_add_networks): Fix an invalid free
 	which happened in case there's no active ssid.
+	(sort_devices): Implement.
+	(nma_menu_add_devices): Sort the devices before adding them to the menu.
 
 2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>
 
